# spec-test

./: CLAUDE.md  README.md  agent.md  pyproject.toml
design/issues/: 006-git-workflow-integration.md
design/specs/: spec-spec-test.md
docs/specs/: spec-spec-test.md
prompts/: migrate-v1-to-v2.md
skills/: spec-feature.md  spec-implement.md  spec-review.md  spec-verify.md  spec-workflow.md
specs/: contracts.md  core.md  hypothesis-integration.md  spec-spec-test.md  z3-proofs.md
src/spec_test/: __init__.py  cli.py  collector.py  contracts.py  decorators.py  reporter.py  runner.py  types.py  verifier.py
src/spec_test/skills/: README.md  spec-verify.md
tests/: test_cli.py  test_collector.py  test_contracts.py  test_decorators.py
