[project]
name = "spec-test"
version = "0.1.0"
description = "Specification-driven development tool with test verification"
authors = [{ name = "Pulse Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
spec-test = "spec_test.cli:app"

[project.entry-points.pytest11]
spec_test = "spec_test.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/spec_test"]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_test"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
